# FRE22

./: Dockerfile
ROS1/devel/: .catkin  .rosinstall  local_setup.sh
ROS1/devel/lib/pkgconfig/: example_control.pc  example_robot_brain.pc  example_robot_description.pc  virtual_maize_field.pc
ROS1/devel/lib/python3/dist-packages/virtual_maize_field/: __init__.py
ROS1/devel/share/example_control/cmake/: example_controlConfig.cmake
ROS1/devel/share/example_robot_brain/cmake/: example_robot_brainConfig.cmake
ROS1/devel/share/example_robot_description/cmake/: example_robot_descriptionConfig.cmake
ROS1/devel/share/virtual_maize_field/cmake/: virtual_maize_fieldConfig.cmake
ROS1/src/: Dockerfile
ROS1/src/example_robot_brain/: CMakeLists.txt  package.xml
ROS1/src/example_robot_brain/launch/: task_mapping.launch  task_navigation.launch
ROS1/src/example_robot_brain/scripts/: detection.py  navigation.py  task_mapping.py  task_navigation.py
ROS1/src/example_robot_description/: package.xml
ROS1/src/example_robot_description/launch/: description.launch  spawn_example_robot.launch
ROS1/src/example_robot_description/urdf/: accessories.urdf.xacro  example_robot.urdf.xacro  realsense_d435.urdf.xacro  rob.urdf  sick_lms1xx.urdf.xacro
ROS1/src/example_robot_description/urdf/accessories/: hokuyo_ust10.urdf.xacro  sick_lms1xx_mount.urdf.xacro
ROS1/src/example_robot_description/urdf/configs/: front_laser  front_laser.bat  front_realsense  front_realsense.bat
