<?xml version="1.0"?>
<package format="3">
  <name>example_robot_brain</name>
  <version>3.0.0</version>
  <description>An example robot to show how to spawn your custom robot in the simulation environment.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fre@todo.todo">fre</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license file="LICENSE">GPLv3</license>
  <url type="website">https://www.fieldrobot.com/event/</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>rospy</exec_depend>
  <!-- <exec_depend>virtual_maize_field</exec_depend> -->
  <!-- <exec_depend>example_robot_description</exec_depend> -->
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>

</package>
